# vscope

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
app/callbacks/: rtbuffer_handlers.py  snapshot_handlers.py  vscope_handlers.py
app/components/: rtbuffer_controls.py  snapshot_list.py  styling.py  vscope_controls.py
app/gui/: __init__.py  notify.py  settings.py
app/plot/: __init__.py  core_plotting.py  live_plot.py  snapshot_plot.py  styling.py
core/: __init__.py  devices.py  interface.py  snapshots.py
docs/: build_research.md
onboard/: interface.c  logger.c  vscope.h
